# lorawanz

./: CMakeLists.txt  README.md  prj.conf
src/: .gitignore  CMakeLists.txt  main.c  personality.c.in  personality.h
